เชื่อม deposit กับนะบบของเพื่อน - close #111
